erDiagram
    EMPLOYEES ||--o{ CLIENTS : "sales_contact"
    EMPLOYEES ||--o{ CONTRACTS : "sales_contact"
    EMPLOYEES ||--o{ EVENTS : "support_contact (nullable)"
    CLIENTS   ||--o{ CONTRACTS : "has"
    CLIENTS   ||--o{ EVENTS : "has"
    CONTRACTS ||--o{ EVENTS : "covers"

    EMPLOYEES {
      int id PK
      string first_name
      string last_name
      string email "UNIQUE"
      string role "MANAGEMENT|SALES|SUPPORT"
      string password_hash
      datetime created_at
      boolean is_active
      datetime deactivated_at "nullable"
      datetime reactivated_at "nullable"
    }

    CLIENTS {
      int id PK
      string first_name
      string last_name
      string email "UNIQUE"
      string phone "nullable"
      string company_name "nullable"
      int sales_contact_id FK
      datetime created_at
      datetime updated_at "nullable"
    }

    CONTRACTS {
      int id PK
      int client_id FK
      int sales_contact_id FK
      decimal total_amount
      decimal amount_due
      boolean is_signed
      datetime created_at
      datetime updated_at "nullable"
    }

    EVENTS {
      int id PK
      int contract_id FK
      int client_id FK
      int support_contact_id FK "nullable"
      datetime start_date
      datetime end_date
      string location
      int attendees
      string notes "nullable"
      datetime created_at
      datetime updated_at "nullable"
    }
